Fix responsiveness on tablets

--- a/src/components/backgroundselector/style/backgroundselector.less
+++ b/src/components/backgroundselector/style/backgroundselector.less
@@ -22,6 +22,9 @@
   border-bottom: 14px solid rgba(230, 230, 230, 0.9);
   border-left: 45px solid transparent;
   border-right: 45px solid transparent;
+  @media (max-width: @screen-tablet) {
+    bottom: 92px;
+  }
 }
 
 .ga-bg-highlight {
@@ -36,18 +39,30 @@
 
 .ga-bg-layer-0 {
   bottom: 52px;
+  @media (max-width: @screen-tablet) {
+    bottom: 26px;
+  }
 }
 
 .ga-bg-layer-1 {
   bottom: 116px;
+  @media (max-width: @screen-tablet) {
+    bottom: 90px;
+  }
 }
 
 .ga-bg-layer-2 {
   bottom: 180px;
+  @media (max-width: @screen-tablet) {
+    bottom: 154px;
+  }  
 }
 
 .ga-bg-layer-3 {
-  bottom: 244px; 
+  bottom: 244px;
+  @media (max-width: @screen-tablet) {
+    bottom: 218px;
+  } 
 }
 
 .ga-pixelkarte-farbe {
